--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
+    "jstify": "^0.14.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
