--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cleancss": "^0.2.2",
+    "gulp-if": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "gulp-notify": "^2.2.0",
     "gulp-replace": "^0.5.4",
     "gulp-streamify": "^1.0.2",
