--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "kk-framework",
+  "name": "Tieba-Sign",
   "version": "1.0.0",
-  "description": "",
-  "dependencies": {},
+  "description": "Front-end environment for TiebaSign-Backend services, which provides faster auto-sign experience in http://tieba.baidu.com and can handle much more user at the same time.",
+  "dependencies": {
+    "event-emitter": "^0.3.4",
+    "jquery": "^3.1.0",
+    "normalize.css": "^4.2.0"
+  },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "browserify": "^13.0.0",
-    "cssnano": "^3.6.2",
-    "del": "^2.2.0",
-    "event-stream": "^3.3.2",
-    "gulp": "^3.9.1",
-    "gulp-if": "^2.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.1.1",
-    "gulp-replace": "^0.5.4",
-    "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
-    "jstify": "^0.14.0",
-    "postcss-image-inliner": "^0.3.1",
-    "postcss-import": "^8.1.2",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "autoprefixer": "^6.3.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "ejs-compiled-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "i18n-webpack-plugin": "^0.3.0",
+    "install": "^0.8.1",
+    "js-yaml": "^3.6.1",
+    "postcss-loader": "^0.9.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
   },
   "scripts": {
-    "watch": "gulp watch",
-    "clean": "gulp clean",
-    "build": "gulp build"
+    "clean": "rm -rf Public/Resource",
+    "build": "npm run clean && webpack -p"
   },
-  "entries": {
-    "js": [
-      "Resource/Demo/test.js"
-    ],
-    "css": [
-      "Resource/Misc/Error.css"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kookxiang/Tieba_Sign.git"
   },
-  "author": "kookxiang <r18@ikk.me>",
-  "license": "ISC"
+  "author": "kookxiang <r18@ikk.me> (https://ikk.me)",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/kookxiang/Tieba_Sign/issues"
+  },
+  "homepage": "https://sign.ikk.me"
 }
