--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "i18n-webpack-plugin": "^0.3.0",
     "install": "^0.8.1",
     "js-yaml": "^3.6.1",
+    "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
