--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Front-end environment for TiebaSign-Backend services, which provides faster auto-sign experience in http://tieba.baidu.com and can handle much more user at the same time.",
   "dependencies": {
-    "event-emitter": "^0.3.4",
+    "eventemitter3": "^1.2.0",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
     "normalize.css": "^4.2.0"
