Add basic module

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,9 @@
                 "anonymous": "always",
                 "named": "never"
             }
+        ],
+        "no-unused-vars": [
+            "warn"
         ]
     }
 }
