--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "eventemitter3": "^1.2.0",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
-    "normalize.css": "^4.2.0"
+    "normalize.css": "^4.2.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-toolbox": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "i18n-webpack-plugin": "^0.3.0",
     "install": "^0.8.1",
     "js-yaml": "^3.6.1",
@@ -22,6 +27,7 @@
     "postcss-loader": "^0.9.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "toolbox-loader": "0.0.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   },
