--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.1.0",
     "normalize.css": "^4.2.0",
     "react": "^15.2.1",
+    "react-addons-update": "^15.3.0",
     "react-dom": "^15.2.1",
     "react-toolbox": "^1.0.3"
   },
